--- a/Social_Icons/index.html
+++ b/Social_Icons/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <title>Social Icons</title>
 
 </head>
 <body>
