--- a/Social_Icons/index.html
+++ b/Social_Icons/index.html
@@ -17,11 +17,12 @@
     </div>
 
      <div class="button-list">
-      <button>GitHub</button>
-      <button>Frontend Mentor</button>
-      <button>LinkedIn</button>
-      <button>Twitter</button>
-      <button>Instagram</button>
+      <button onclick="window.open('http://www.github.com', '_blank')">GitHub</button>
+      <button onclick="window.open('https://www.frontendmentor.io/', '_blank')">Frontend Mentor</button>
+      <button onclick="window.open('https://www.linkedin.com/', '_blank')">LinkedIn</button>
+      <button onclick="window.open('https://www.twitter.com/', '_blank')">Twitter</button>
+      <button onclick="window.open('https://www.instagram.com/', '_blank')">Instagram</button>
+    </div>
     </div>
   </main>
 
